--- a/arch/arm/mach-tegra/Kconfig
+++ b/arch/arm/mach-tegra/Kconfig
@@ -505,6 +505,12 @@ config TEGRA_PREINIT_CLOCKS
 	  Preinitialize Tegra clocks to known states before actual full-
 	  scale clock initialization starts.
 
+config USBHOST
+	bool "USBHOST related runtime configuration"
+	default y
+	help
+	  A simple sysfs interface to allow switching between OTG and FI mode.
+
 config GROUPER_HARDBOOT_RECOVERY
 	bool "Reboot to recovery partition when using Kexec-hardboot"
 	depends on MACH_GROUPER
